package topstack_Autoscale;

option java_package = "com.transcend.autoscale.message";
option java_outer_classname = "CreateAutoScalingGroupMessage";

message CreateAutoScalingGroupRequestMessage {
    required bool typeId = 200;
    message Tag {
        required string key = 1;
        optional string value = 2;
    }
    required string requestId = 1;
    required string callerAccessKey = 2;
    required string autoScalingGroupName = 3;
    required string launchConfigurationName = 4;
    required uint32 minSize = 5;
    required uint32 maxSize = 6;
    optional uint32 desiredCapacity = 7;
    optional uint32 defaultCooldown = 8;
    repeated string availabilityZone = 9;
    repeated string loadBalancerName = 10;
    optional string healthCheckType = 11;
    optional uint32 healthCheckGracePeriod = 12;
    optional string placementGroup = 13;
    repeated Tag tags = 14;
    repeated string terminationPolicy = 15;
    optional string vpcZoneIdentifier = 16;
}

message CreateAutoScalingGroupResultMessage {
    required bool typeId = 201;
    required string requestId = 1;
    required string callerAccessKey = 2;
}